--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,58 @@
-.App {
-  text-align: center;
+div {
+  margin: 20px;
+  font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.dashboard {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr 1fr;
+  height: 100hv;
+  background-color: lightgray;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.sidebar {
+  display: grid;
+  grid-column: 1/1;
+  grid-row: 1/4;
+  background-color: darkgrey;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.review {
+  display: grid;
+  grid-column: 2/3;
+  grid-row: 1/2;
+  padding-left: 10px;
+  background-color: darkgrey;
 }
 
-.App-link {
-  color: #61dafb;
+.rating {
+  display: grid;
+  grid-column: 3/4;
+  grid-row: 1/2;
+  padding-left: 10px;
+  background-color: darkgrey;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.sentimentAnalysis {
+  display: grid;  
+  grid-column: 4/5;
+  grid-row: 1/2;
+  padding-left: 10px;
+  background-color: darkgrey;
+}
+
+.websiteVisitors {
+  grid-column: 2/5;
+  grid-row: 2/4;
+  padding-left: 10px;
+  background-color: darkgrey;
+}
+
+.websiteVisitorsBackground {
+  height: 450px;
+  width: 700px;
+  margin-top: 50px;
+  margin-left: 100px;
+  background-color: #565656;
 }
